arreglar problemas de permisos en opensuse